# accelerate-llvm

./: .appveyor.yml  .dockerignore  .ghci  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  TODO-llvm-pretty.txt  TODO.md  accelerate-llvm.cabal  cabal.project  flake.nix  ghci  hie.yaml  nofiboutput  nofiboutput.native  nofiboutput.temp  stack-7.10.yaml  stack-7.8.yaml  stack-8.0.yaml  stack-8.10.yaml  stack-8.2.yaml  stack-8.4.yaml  stack-8.6.yaml  stack-8.8.yaml  stack-9.0.yaml  stack-9.2.yaml  stack.yaml
.github/: issue_template.md
accelerate-llvm/: CHANGELOG.md  LICENSE  README.md  accelerate-llvm.cabal
accelerate-llvm-native/: CHANGELOG.md  Setup.hs  accelerate-llvm-native.cabal
accelerate-llvm-native/Data/Array/Accelerate/LLVM/: Native.hs
accelerate-llvm-native/Data/Array/Accelerate/LLVM/Native/: CodeGen.hs  Compile.hs  Debug.hs  Embed.hs  Execute.hs  Foreign.hs  Internal.hs  Link.hs  Plugin.hs  State.hs  Target.hs
accelerate-llvm-native/icebox/: Gang.hs
accelerate-llvm-native/plugin/: Main.hs
accelerate-llvm-native/src/Control/Concurrent/: Extra.hs
accelerate-llvm-native/src/Data/Array/Accelerate/LLVM/: Native.hs
accelerate-llvm-native/src/LLVM/AST/: ToLLVMPretty.hs
accelerate-llvm-native/test/nofib/: Main.hs
accelerate-llvm-nvvm/: accelerate-llvm-nvvm.cabal
accelerate-llvm-nvvm/Data/Array/Accelerate/LLVM/: NVVM.hs
accelerate-llvm-nvvm/Data/Array/Accelerate/LLVM/NVVM/: CodeGen.hs  Compile.hs  Context.hs  Debug.hs  Execute.hs  State.hs  Target.hs
accelerate-llvm-plugin/: CHANGELOG.md  Main.hs  accelerate-llvm-plugin.cabal
accelerate-llvm-plugin/Data/Array/Accelerate/LLVM/: Plugin.hs
accelerate-llvm-plugin/Data/Array/Accelerate/LLVM/Plugin/: Annotation.hs
accelerate-llvm-ptx/: CHANGELOG.md  accelerate-llvm-ptx.cabal
accelerate-llvm-ptx/Data/Array/Accelerate/LLVM/: PTX.hs
accelerate-llvm-ptx/Data/Array/Accelerate/LLVM/PTX/: CodeGen.hs  Compile.hs  Context.hs  Debug.hs  Embed.hs  Execute.hs  Foreign.hs  Internal.hs  Link.hs  Pool.hs  State.hs  Target.hs
accelerate-llvm-ptx/cbits/: tracy.c
accelerate-llvm-ptx/src/Data/Array/Accelerate/LLVM/: PTX.hs
accelerate-llvm-ptx/src/GHC/Heap/: NormalForm.hs
accelerate-llvm-ptx/src/Language/Haskell/TH/: Extra.hs
accelerate-llvm-ptx/src/System/Process/: Extra.hs
accelerate-llvm-ptx/test/nofib/: Main.hs
accelerate-llvm/Control/Parallel/: Meta.hs
accelerate-llvm/Control/Parallel/Meta/: Worker.hs
accelerate-llvm/Control/Parallel/Meta/Resource/: Backoff.hs  SMP.hs  Single.hs
accelerate-llvm/Control/Parallel/Meta/Trans/: LBS.hs
accelerate-llvm/Data/Array/Accelerate/LLVM/: AST.hs  CodeGen-untyped.hs  CodeGen.hs  Compile.hs  Debug.hs  Embed.hs  Execute.hs  Foreign.hs  Link.hs  State.hs  Target.hs  Util.hs
accelerate-llvm/Data/Array/Accelerate/LLVM/Analysis/: Match.hs
accelerate-llvm/Data/Array/Accelerate/LLVM/Array/: Data.hs  Nursery.hs  Table.hs
accelerate-llvm/Data/Array/Accelerate/LLVM/CodeGen/: Arithmetic.hs  Array.hs  Base.hs  Constant.hs  Downcast.hs  Environment.hs  Exp.hs  IR.hs  IR.hs-boot  Intrinsic.hs  Loop.hs  Module.hs  Monad.hs  Monad.hs-boot  Permute.hs  Ptr.hs  Skeleton.hs  Stencil.hs  Sugar.hs  Sugar.hs-boot  Type.hs
accelerate-llvm/Data/Array/Accelerate/LLVM/CodeGen-untyped/: Intrinsic.hs  Monad.hs
accelerate-llvm/Data/Array/Accelerate/LLVM/Compile/: Cache.hs
accelerate-llvm/Data/Array/Accelerate/LLVM/Execute/: Async.hs  Environment.hs  Marshal.hs  Schedule.hs
accelerate-llvm/Data/Array/Accelerate/LLVM/Link/: Cache.hs
accelerate-llvm/Data/Array/Accelerate/LLVM/NVVM/: Execute.hs
accelerate-llvm/Data/Array/Accelerate/LLVM/Native/: Debug.hs  Execute.hs
accelerate-llvm/Data/ByteString/Short/: Char8.hs  Extra.hs
accelerate-llvm/Data/IORef/: Storable.hs
accelerate-llvm/Data/Range/: Range.hs
accelerate-llvm/LLVM/AST/Type/: AddrSpace.hs  Constant.hs  Flags.hs  Global.hs  Instruction.hs  Metadata.hs  Name.hs  Operand.hs  Representation.hs  Terminator.hs
accelerate-llvm/LLVM/AST/Type/Instruction/: Atomic.hs  Compare.hs  RMW.hs  Volatile.hs
accelerate-llvm/LLVM/General/AST/Type/: AddrSpace.hs  Bits.hs  Constant.hs  Downcast.hs  Flags.hs  Global.hs  Instruction.hs  Metadata.hs  Name.hs  Operand.hs  Representation.hs  Terminator.hs
accelerate-llvm/LLVM/General/AST/Type/Instruction/: Atomic.hs  Compare.hs  RMW.hs  Volatile.hs
accelerate-llvm/icebox/Control/Parallel/: Meta.hs
accelerate-llvm/icebox/Control/Parallel/Meta/: Worker.hs
accelerate-llvm/icebox/Control/Parallel/Meta/Resource/: Backoff.hs  NUMA.hs  SMP.hs  Single.hs
accelerate-llvm/icebox/Control/Parallel/Meta/Trans/: LBS.hs
accelerate-llvm/icebox/Data/: Range.hs
accelerate-llvm/llvm-pretty/: .gitignore
accelerate-llvm/llvm-pretty/src/Text/: LLVM.hs
accelerate-llvm/llvm-pretty/src/Text/LLVM/: AST.hs  DebugUtils.hs  Labels.hs  Lens.hs  PP.hs  Parser.hs  Triple.hs  Util.hs
accelerate-llvm/llvm-pretty/src/Text/LLVM/Labels/: TH.hs
accelerate-llvm/llvm-pretty/src/Text/LLVM/Triple/: AST.hs  Parse.hs  Print.hs
accelerate-llvm/src/Control/Parallel/: Meta.hs
accelerate-llvm/src/Control/Parallel/Meta/: Worker.hs
accelerate-llvm/src/Control/Parallel/Meta/Resource/: Backoff.hs  SMP.hs  Single.hs
accelerate-llvm/src/Control/Parallel/Meta/Trans/: LBS.hs
accelerate-llvm/src/Data/: Range.hs
accelerate-llvm/src/Data/Array/Accelerate/LLVM/: AST.hs  CodeGen.hs  Compile.hs  Embed.hs  Environment.hs  Execute.hs  Extra.hs  Foreign.hs  Link.hs  State.hs  Target.hs  Util.hs
accelerate-llvm/src/Data/Array/Accelerate/TH/: Compat.hs
accelerate-llvm/src/Data/ByteString/Short/: Char8.hs  Extra.hs
accelerate-llvm/src/LLVM/AST/: Orphans.hs
accelerate-llvm/src/LLVM/AST/Type/: AddrSpace.hs  Constant.hs  Downcast.hs  Flags.hs  Function.hs  GetElementPtr.hs  Global.hs  InlineAssembly.hs  Instruction.hs  Metadata.hs  Name.hs  Operand.hs  Representation.hs  Terminator.hs
accelerate-llvm/src/Language/Haskell/TH/: Extra.hs
accelerate-llvm/test/: Test1.hs  Test2.hs
icebox/: travis.yml  (+2 more)
icebox/accelerate-llvm-multidev/: LICENSE  accelerate-llvm-multidev.cabal
(+326 files in other folders)
