name:                   accelerate-llvm-plugin
version:                0.1.0.0
cabal-version:          >= 1.10
build-type:             Simple

synopsis:               Ahead-of-time compilation support for Accelerate
description:
  GHC plugin and ghci wrapper to help support ahead-of-time compilation in the
  Accelerate LLVM backends.
  .
  For further information refer to the main /Accelerate/ package:
  <http://hackage.haskell.org/package/accelerate>

license:                BSD3
license-file:           LICENSE
author:                 Trevor L. McDonell
maintainer:             Trevor L. McDonell <tmcdonell@cse.unsw.edu.au>
bug-reports:            https://github.com/AccelerateHS/accelerate/issues
category:               Compilers/Interpreters, Concurrency, Data, Parallelism

extra-source-files:
    CHANGELOG.md
    README.md

library
  exposed-modules:
    Data.Array.Accelerate.LLVM.Plugin
    Data.Array.Accelerate.LLVM.Plugin.Annotation

  build-depends:
          base                          >= 4.7 && < 4.11
        , ghc

  default-language:
    Haskell2010

executable ghci-acc
  main-is:
    Main.hs

  build-depends:
          base                          >= 4.7 && < 4.11
        , ghc-paths
        , process                       >= 1.2

  default-language:
    Haskell2010

-- vim: nospell
